--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node": ">=0.10.30"
   },
   "dependencies": {
-    "hoek": "2.x.x"
+    "hoek": "2.x.x",
+    "joi": "6.x.x"
   },
   "devDependencies": {
     "lab": "5.x.x",
