--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@hapi/boom": "7.x.x",
     "@hapi/hoek": "6.x.x",
-    "@hapi/joi": "14.x.x"
+    "@hapi/joi": "15.x.x"
   },
   "devDependencies": {
-    "code": "5.x.x",
-    "lab": "18.x.x"
+    "@hapi/code": "5.x.x",
+    "@hapi/lab": "18.x.x"
   },
   "scripts": {
-    "test": "lab -a code -t 100 -L",
-    "test-cov-html": "lab -a code -r html -o coverage.html"
+    "test": "lab -a @hapi/code -t 100 -L",
+    "test-cov-html": "lab -a @hapi/code -r html -o coverage.html"
   },
   "license": "BSD-3-Clause"
 }
