--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "4.1.3",
   "repository": "git://github.com/hapijs/bossy",
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "keywords": [
     "cli",
     "command line",
@@ -11,13 +14,13 @@
     "parser"
   ],
   "dependencies": {
-    "@hapi/boom": "7.x.x",
-    "@hapi/hoek": "8.x.x",
-    "@hapi/joi": "16.x.x"
+    "@hapi/boom": "9.x.x",
+    "@hapi/hoek": "9.x.x",
+    "@hapi/joi": "17.x.x"
   },
   "devDependencies": {
-    "@hapi/code": "6.x.x",
-    "@hapi/lab": "20.x.x"
+    "@hapi/code": "8.x.x",
+    "@hapi/lab": "22.x.x"
   },
   "scripts": {
     "test": "lab -a @hapi/code -t 100 -L",
