--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@hapi/boom": "9.x.x",
     "@hapi/hoek": "9.x.x",
-    "@hapi/joi": "17.x.x"
+    "@hapi/validate": "1.x.x"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
