--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "@hapi/bounce": "2.x.x",
+    "@hapi/bourne": "2.x.x",
     "@hapi/hoek": "9.x.x",
     "@hapi/validate": "1.x.x"
   },
