--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "options",
     "parser"
   ],
+  "eslintConfig": {
+    "extends": [
+      "plugin:@hapi/module"
+    ]
+  },
   "dependencies": {
     "@hapi/boom": "9.x.x",
     "@hapi/bounce": "2.x.x",
@@ -22,6 +27,7 @@
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
+    "@hapi/eslint-plugin": "*",
     "@hapi/lab": "24.x.x"
   },
   "scripts": {
